# hybrid-autoscaler-dissertation

./: .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  future_work.docx  pyproject.toml
analysis/: __init__.py  stats.py
controller/: __init__.py  config.py  decision_engine.py  evidence_bundle.py  forecaster_loader.py  k8s_actuator.py  loop.py  main.py  prometheus_client.py  state.py
controller/configs/: frontend-local.yaml  frontend-phase4-fault.yaml  frontend-phase4.yaml
data/: __init__.py  leakage_check.py  schema.py  splits.py  synthetic.py
data/collect/: __init__.py  exporter.py  queries.py
data/features/: __init__.py  engineer.py  upstream.py
dissertation/: Omoyele_olabode_sodiq_Dissertation_Draft.docx
docs/: IMPLEMENTATION_LOG.md  SEEDS.md  deviations.md
experiments/: repair_wrk2_latencies.py  run_phase5_analysis.py  run_phase6_shap.py  run_phase7_narrator.py  supervisor.py  trial_schema.py
experiments/analysis/: run_stats.py
experiments/hpa/: frontend-hpa.yaml
experiments/results/: ab-frontend.jsonl  phase0-verify.txt  phase1-calibration-run.jsonl  phase1-frontend.jsonl  phase3_20260702T145425Z_h1.csv  phase3_20260702T145425Z_model_registry.yaml  phase3_20260702T145425Z_selection.csv  phase3_20260703T090249Z_h1.csv  phase3_20260703T090249Z_model_registry.yaml  phase3_20260703T090249Z_selection.csv  phase3_20260709T001052Z_h1.csv  phase3_20260709T001052Z_model_registry.yaml  phase3_20260709T001052Z_selection.csv  phase4-frontend-fault.jsonl  phase4-frontend.jsonl  phase5_stats.json  phase7_h4.json  phase7_narratives.jsonl  results_canonical-ab-10-trials.jsonl  results_canonical-ab-v2.jsonl  stats_report.csv
experiments/traces/: alibaba_rps_30m.csv
experiments/trial_plans/: canonical-10-trials.yaml  canonical-v2.yaml  generate_plan.py
experiments/workloads/: burst.py  burst_minimal.py  campaign_burst.py  campaign_ramp.py  periodic.py  ramp.py  trace_replay.py  user.py
explain/: __init__.py  attribution.py  faithfulness.py
forecasting/: __init__.py  base.py  comparison.py  holt_winters.py  intervals.py  lstm_model.py  metrics.py  run_forecasting.py  sarima.py  seasonal_naive.py  seeds.py  selection.py  xgboost_model.py
infra/: README.md  bootstrap-macos.sh  verify.sh
infra/ansible/: README.md  inventory.example.ini  provision.yml
infra/deathstarbench/: README.md  install.sh
infra/kind/: up.sh  (+2 more)
narrate/: __init__.py  factscore.py  narrator.py
preregistration/: hypotheses.yaml  schema.json
reproducibility/: host-spec.json  host_spec.py
tests/: test_comparison.py  test_decision_engine.py  test_evidence_bundle.py  test_explain.py  test_exporter.py  test_features.py  test_forecaster_loader.py  test_holt_winters.py  test_intervals.py  test_leakage_check.py  test_lstm_model.py  test_metrics.py  test_narrator.py  test_run_forecasting.py  test_sarima.py  test_seasonal_naive.py  test_seeds.py  test_selection.py  test_splits.py  test_stats.py  test_synthetic.py  test_xgboost_model.py
(+453 files in other folders)
