[project]
name = "hybrid-autoscaler"
version = "0.1.0"
description = "Predictive and explainable horizontal autoscaling for Kubernetes microservices."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Omoyele Sodiq Olabode" }]

# Dependencies are grouped by phase so they can be installed selectively if needed,
# but `uv sync` installs everything for full reproducibility.
dependencies = [
    # ───── Phase 0–2: data collection & feature engineering ─────────────────
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyarrow==16.1.0",                # Parquet I/O
    "requests==2.32.3",
    "prometheus-api-client==0.5.5",
    "kubernetes==30.1.0",             # k8s Python client
    "pyyaml==6.0.2",
    "tenacity==8.5.0",                # retries

    # ───── Phase 3: forecasting models ──────────────────────────────────────
    "scikit-learn==1.5.1",
    "statsmodels==0.14.2",            # Holt-Winters, SARIMA
    "xgboost==2.1.1",
    "torch>=2.6.0,<2.8.0",            # LSTM (Apple Silicon: uses MPS; 2.6+ fixes MPS deadlock)
    "scipy==1.14.0",

    # ───── Phase 4: controller / decision engine ────────────────────────────
    # (uses kubernetes + numpy + pydantic already listed)
    "pydantic==2.8.2",                # decision-engine config validation
    "structlog==24.4.0",              # audit logging (evidence bundle)

    # ───── Phase 5: experiment orchestration ────────────────────────────────
    "locust==2.44.0",                 # §3.9 pinned exactly
    "click==8.1.7",                   # supervisor CLI

    # ───── Phase 6: SHAP attribution + faithfulness ─────────────────────────
    "shap==0.46.0",                   # TreeSHAP, KernelSHAP
    "timeshap==1.0.4",                # TimeSHAP for LSTM (Bento et al. 2021)

    # ───── Phase 7: LLM narrative (clients only) ────────────────────────────
    "ollama==0.3.1",                  # local Llama-3.1-8B via Ollama
    "openai==1.40.0",                 # GPT-4o-mini / GPT-4o-as-judge

    # ───── Phase 8: statistical analysis ────────────────────────────────────
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "statannotations==0.7.2",         # significance brackets in figures
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.5.5",
    "black==24.4.2",
    "mypy==1.11.0",
    "jupyterlab==4.2.4",
    "ipykernel==6.29.5",
]

[tool.uv]
package = false                       # treat as application, not a library

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# pytest.importorskip("torch"/"statsmodels"/…) guards MUST precede the imports
# they protect — E402 here is the documented pytest pattern, not an oversight.
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
